--- a/index.html
+++ b/index.html
@@ -2,14 +2,106 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- Primary SEO Meta Tags -->
+    <title>TimeMachine</title>
+    <meta name="description" content="TimeMachine Chat is the super app that brings your tech essentials into an intelligent, safe and secured chat interface." />
+    <meta name="keywords" content="TimeMachine, TimeMachine Chat, TimeMachine AI, TimeMachine Girlie, TimeMachine PRO, TimeMachine Air, AI chat, AI personas, ChatGPT, Gemini, Claude, Grok, group chat, AI assistant" />
+    <meta name="author" content="TimeMachine" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://timemachinechat.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://timemachinechat.com/" />
+    <meta property="og:title" content="TimeMachine" />
+    <meta property="og:description" content="TimeMachine Chat is the super app that brings your tech essentials into an intelligent, safe and secured chat interface." />
+    <meta property="og:image" content="https://timemachinechat.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="TimeMachine Chat" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://timemachinechat.com/" />
+    <meta name="twitter:title" content="TimeMachine" />
+    <meta name="twitter:description" content="TimeMachine Chat is the super app that brings your tech essentials into an intelligent, safe and secured chat interface." />
+    <meta name="twitter:image" content="https://timemachinechat.com/og-image.png" />
+
+    <!-- Theme & App -->
+    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="TimeMachine" />
+    <meta name="application-name" content="TimeMachine Chat" />
+
+    <!-- Favicons & Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Structured Data: WebSite (controls site name in Google search results) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "TimeMachine",
+      "alternateName": ["TimeMachine Chat", "TimeMachine AI", "TimeMachine Girlie", "TimeMachine PRO", "Time Machine Chat"],
+      "url": "https://timemachinechat.com"
+    }
+    </script>
+
+    <!-- Structured Data: WebApplication -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "TimeMachine Chat",
+      "alternateName": "TimeMachine",
+      "url": "https://timemachinechat.com",
+      "description": "TimeMachine Chat is the super app that brings your tech essentials into an intelligent, safe and secured chat interface.",
+      "applicationCategory": "CommunicationApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "featureList": [
+        "Multiple AI personas",
+        "ChatGPT, Gemini, Claude, Grok integration",
+        "Group chat with friends",
+        "Image generation",
+        "Music recommendations",
+        "Dark and light themes"
+      ],
+      "creator": {
+        "@type": "Organization",
+        "name": "TimeMachine",
+        "url": "https://timemachine.notion.site"
+      }
+    }
+    </script>
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-    <title>TimeMachine</title>
   </head>
   <body>
+    <noscript>
+      <div style="padding:2rem;text-align:center;font-family:system-ui,sans-serif;color:#fff;background:#0a0a0a;min-height:100vh;display:flex;align-items:center;justify-content:center;">
+        <div>
+          <h1>TimeMachine</h1>
+          <p>TimeMachine Chat is the super app that brings your tech essentials into an intelligent, safe and secured chat interface.</p>
+          <p>Please enable JavaScript to use this app.</p>
+        </div>
+      </div>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
